Wrapper: mark nio modules as accessible for Java9 Netty
fix #641